--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-cli-service build",
-    "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tabler/icons-vue": "^3.30.0",
@@ -15,7 +14,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
-    "gh-pages": "^6.3.0",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.1"
   }
